--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 
 [packages]
 django = "*"
+psycopg2-binary = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.7"
