add Procfile and prepare database settings for heroku server

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ django = "*"
 psycopg2-binary = "*"
 django-crispy-forms = "*"
 pillow = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
