install whitenoise and add to settings.py

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-crispy-forms = "*"
 pillow = "*"
 gunicorn = "*"
 django-heroku = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
