add boto3 and django-storage library, and add related settings.py for AWS

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ pillow = "*"
 gunicorn = "*"
 django-heroku = "*"
 whitenoise = "*"
+boto3 = "*"
+django-storages = "*"
 
 [requires]
 python_version = "3.7"
