--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ django-heroku = "*"
 whitenoise = "*"
 boto3 = "*"
 django-storages = "*"
+pytest-django = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.7"
